# slack-version-bot

./: .gitignore  README.md
app/: Dockerfile  pyproject.toml
app/src/: app.py
app/src/modules/bot_utils/: bot_utils.py
app/src/modules/k8s_utils/: k8s_utils.py
app/src/modules/sensitive_data_censors/: perediso_scan.py  trufflehog_scan.py
chart/bot/: Chart.yaml  values.yaml
chart/bot/templates/: _helpers.tpl  deployment.yaml  secret.yaml
chart/bot/templates/rbac/: clusterrole.yaml  crb.yaml  serviceaccount.yaml
