[tool.poetry]
name = "version-bot"
version = "0.1.0"
description = ""
authors = ["yuval <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
slack-bolt = "^1.20.1"
asyncio = "^3.4.3"
aiohttp = "^3.10.10"
kubernetes = "^31.0.0"
presidio-analyzer = "^2.2.355"
presidio-anonymizer = "^2.2.355"
spacy = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
